# doren-bnn

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  sk  utils.py
doren-bnn-concrete/: .gitignore  Cargo.toml
doren-bnn-concrete/src/: main.rs
doren_bnn/: __init__.py  mobilenet.py  resnet.py  toynet.py  utils.py  xnor_net.py  xnor_react.py  xnorpp.py  xnorpp_sca.py  xnorpp_sttn.py
doren_bnn_concrete/: .gitignore  Cargo.toml  npe.txt  output.txt  sk
doren_bnn_concrete/benches/: nn_benchmark.rs
doren_bnn_concrete/src/: base.rs  fheint.rs  lib.rs  main.rs  nn.rs  npe.rs  toynet.rs
experiments/: mobilenet-xnorpp-cifar10.ipynb  mobilenet-xnorpp-sca-cifar10-full-test.ipynb  mobilenet-xnorpp-sca-cifar10-full.ipynb  mobilenet-xnorpp-sca-cifar10.ipynb  mobilenet-xnorpp-sca.ipynb  mobilenet-xnorpp-sttn-cifar10.ipynb  mobilenet-xnorpp-sttn-learnable-cifar10.ipynb  mobilenet-xnorpp.ipynb  sk  toynet.ipynb
helib/: CMakeLists.txt
helib/examples/: BGV_packed_arithmetic.cpp
report/: README.md  references.bib  template.tex
