[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "doren_bnn"
authors = [{name = "Ng Wei En", email = "weien1292@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
  "torch == 1.10.2",
  "torchvision == 0.11.3",
]

[project.optional-dependencies]
dev = ["black", "flake8", "pre-commit"]
