[tool.poetry]
name = "doren-bnn"
version = "0.1.0"
description = ""
authors = ["Ng Wei En <weien1292@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.10.2"
torchvision = "0.11.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
