[tool.poetry]
name = "doren-bnn"
version = "0.1.0"
description = ""
authors = ["Ng Wei En <weien1292@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "~3.9"
torch = "1.11.0"
torchvision = "0.12.0"
torchinfo = "^1.6.5"
tensorboard = "^2.9.0"
torch-tb-profiler = "^0.4.0"
tqdm = "^4.64.0"
scikit-learn = "1.0.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
