[package]
name = "doren_bnn_concrete"
version = "0.1.0"
edition = "2021"

[lib]
name = "doren_bnn_concrete"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "^1.0.56"
bincode = "^1.3.3"
concrete = { version = "=0.2.0-beta.1", features = ["shortints", "integers", "serde"] }
concrete-commons = "=0.2.0"
itertools = "^0.10.3"
once_cell = "^1.12.0"
pyo3 = { version = "^0.16.5", features = ["extension-module"] }
rayon = "^1.5.3"

[dev-dependencies]
criterion = { version = "^0.3.6", features = ["html_reports"] }
rand = "^0.8.5"

[[bench]]
name = "nn_benchmark"
harness = false
